create templates folder and files

--- a/awardsapp/templates/base.html
+++ b/awardsapp/templates/base.html
@@ -1,4 +1,4 @@
-{% load bootstrap3 %} {% load static%}
+{% comment %} {% load bootstrap3 %} {% load static%}
 
 <html>
 
@@ -28,4 +28,4 @@
 
 </body>
 
-</html>
+</html> {% endcomment %}
