--- a/awardsapp/templates/index.html
+++ b/awardsapp/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% comment %} {% extends 'base.html' %}
 {% load bootstrap3 %}
 {% load static %}
 {% block content %}
@@ -72,4 +72,4 @@
 {% endblock %} {% block scripts %} {{block.super}}
 <script type="text/javascript" src="{%static 'js/scripts.js'%}"></script>
 
-{% endblock %}
+{% endblock %} {% endcomment %}
