create base.html markup

--- a/awardsapp/templates/base.html
+++ b/awardsapp/templates/base.html
@@ -1,4 +1,4 @@
-{% comment %} {% load bootstrap3 %} {% load static%}
+{% load bootstrap4 %} {% load static%}
 
 <html>
 
@@ -28,4 +28,4 @@
 
 </body>
 
-</html> {% endcomment %}
+</html>
