--- a/awardsapp/templates/index.html
+++ b/awardsapp/templates/index.html
@@ -1,4 +1,4 @@
-{% comment %} {% extends 'base.html' %}
+{% extends 'base.html' %}
 {% load bootstrap3 %}
 {% load static %}
 {% block content %}
@@ -63,7 +63,7 @@
         <li>LANGUAGE</li>
         <br>
 
-        <li style="font-size:10px;"> <strong>© 2018 MELISSA MALALA</strong></li>
+        <li style="font-size:10px;"> <strong>© 2019 JULIE K</strong></li>
       </ul>
     </div>
   </div>
@@ -72,4 +72,4 @@
 {% endblock %} {% block scripts %} {{block.super}}
 <script type="text/javascript" src="{%static 'js/scripts.js'%}"></script>
 
-{% endblock %} {% endcomment %}
+{% endblock %}
