--- a/awardsapp/templates/navbar.html
+++ b/awardsapp/templates/navbar.html
@@ -1,4 +1,4 @@
-{% comment %} {% load static %}
+{% load static %}
 <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow|Charmonman|Kodchasan|Dancing+Script|Spirax" rel="stylesheet">
 
 <nav class="navbar bg-light ">
@@ -65,4 +65,4 @@
 
 
   </div>
-</nav> {% endcomment %}
+</nav>
