--- a/awardsapp/templates/registration/registration_form.html
+++ b/awardsapp/templates/registration/registration_form.html
@@ -1,26 +1,25 @@
 {%extends "registration/base.html"%} {% load bootstrap3 %} {%load static%} {% block content %}
-
-<div class="container" style="background-color:#fff;
- background-image:('../../static/photos/rawpixel-594846-unsplash.jpg')">
-  <div class="row">
+<body style="backgroung-image : url('https://previews.123rf.com/images/mariamikulich/mariamikulich1702/mariamikulich170200011/72583231-vector-colorful-abstract-background-rainbow-beautiful-colors.jpg');">
+<div class="container" style="background-image : url('https://previews.123rf.com/images/mariamikulich/mariamikulich1702/mariamikulich170200011/72583231-vector-colorful-abstract-background-rainbow-beautiful-colors.jpg');">
+  <div class="row"> 
 
     <div class="col-md-6 mt-5">
-      <img class="thumbnail" src="{% static 'photos/gosh-her-voice-is-too-monotone.jpg' %}" style="height:450px;width:600px;">
+      
 
-      <div class="card mt-5" style="width: 28rem;">
+      <div class="" style="width: 28rem;">
         <div class="card-body text-center">
-          <h5 class="card-title" style="font-family: 'Dosis', cursive;">Have an account already?</h5>
+          <h5 class="" style="font-family: 'Dosis', cursive;">Have an account already?</h5>
           <h2 style="color:grey;font-size:10px; font-family: 'Dosis', cursive;">By signing up, you agree to our Terms, Data Policy and Cookies Policy.</h2>
           <a href="/accounts/login" class="btn btn-primary" style="font-family: 'Dosis', cursive;">Login</a>
         </div>
       </div>
 
       <div class="card mt-5" style="width: 28rem;">
-        <div class="card-body text-center">
+        <div class="card-body text-center"> 
           <h5 class="card-title" style="font-family: 'Dosis', cursive;">Get the app.</h5>
-          <a href="https://itunes.apple.com/ke/app/instagram/id389801252?mt=8"><img src="{% static 'photos/disruptive-innovation.jpg' %}"
+          {% comment %} <a href="https://itunes.apple.com/ke/app/instagram/id389801252?mt=8"><img src="{% static 'photos/disruptive-innovation.jpg' %}"
               style="height:90px;width:200px;"></a>
-          <a href="https://play.google.com/store?hl=en"><img src="{% static 'photos/food-blogging.jpg' %}" style="height:90px;width:200px;"></a>
+          <a href="https://play.google.com/store?hl=en"><img src="{% static 'photos/food-blogging.jpg' %}" style="height:90px;width:200px;"></a> {% endcomment %}
         </div>
       </div>
 
@@ -64,19 +63,7 @@
     <div class="col-md-12">
       <div class="footer text-center">
         <ul id="footer1">
-          <li>ABOUT US</li>
-          <li>SUPPORT</li>
-          <li>PRESS</li>
-          <li>API</li>
-          <li>JOBS</li>
-          <li>PRIVACY</li>
-          <li>TERMS</li>
-          <li>DIRECTORY</li>
-          <li>PROFILES</li>
-          <li>HASHTAGS</li>
-          <li>LANGUAGE</li>
-          <br>
-
+          
           <li style="font-size:10px;"> <strong>© 2019 JULIE K</strong></li>
         </ul>
 
@@ -85,4 +72,5 @@
     </div>
   </div>
 </div>
+</body>
 {% endblock %}
