--- a/awardsapp/templates/email/awardsemail.html
+++ b/awardsapp/templates/email/awardsemail.html
@@ -1,4 +1,3 @@
 <h1>Hello {{name}}</h1>
 
-<h5>Welcome to the Awards Website!
-    You will be able to rate and review projects</h5>
+<h5>Welcome to Project Awards </h5>
