--- a/awardsapp/templates/navbar.html
+++ b/awardsapp/templates/navbar.html
@@ -1,13 +1,14 @@
 {% load static %}
+{%load bootstrap3 %}
 <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow|Charmonman|Kodchasan|Dancing+Script|Spirax" rel="stylesheet">
 
 <nav class="navbar bg-light ">
   <div class="container-fluid">
     <div class="navbar-header">
-        <a class="navbar-brand" href="{% url 'homePage' %}"><img src="https://png.icons8.com/linen/50/000000/rating.png" style="height:40px;width:36px;">
+        <a class="navbar-brand" href="{% url 'homePage' %}">
       </a>
 
-      <a class="navbar-brand" id="victor" href="{% url 'homePage' %}">AWARDS
+      <a class="navbar-brand" id="victor" href="{% url 'homePage' %}">
       </a>
     </div>
     <div>
@@ -16,12 +17,14 @@
       {% if user.is_authenticated %}
 
       <li style="font-family: 'Dosis', sans-serif;">
-        <a href="{%url 'edit_profile'%}">Edit Profile</a>
+        <a href="{% url 'individual_profile_page' user.id %}">My Profile</a>
       </li>
 
       <li style="font-family: 'Dosis', sans-serif;">
-        <a href="{% url 'individual_profile_page' user.id %}">My Profile</a>
+        <a href="{%url 'edit_profile'%}">change Profile</a>
       </li>
+
+      
                    <li style="font-family: 'Dosis', sans-serif;">
                     <a href="{%url 'new_project'%}">Submit Your Project</a>
                   </li>
